--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,11 @@ crate-type = ["cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[profile.release]
+opt-level = 2
+strip = true
+
 [dependencies]
 ash = "0.37.2"
 
